--- a/app/src/main/res/layout/activity_wallet_detail_layout.xml
+++ b/app/src/main/res/layout/activity_wallet_detail_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#F6F6F6"
     android:clipChildren="true"
     android:clipToPadding="true">
 
@@ -11,8 +11,8 @@
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
         android:backgroundTint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -21,15 +21,17 @@
             android:layout_height="50dp">
 
             <ImageView
-                android:layout_width="24dp"
+                android:id="@+id/iv_go_back"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerInParent="true"
                 android:layout_marginStart="@dimen/dp15"
                 android:adjustViewBounds="true"
-                android:src="@mipmap/ic_more_setting" />
+                android:src="@mipmap/return_icon" />
 
             <TextView
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -37,17 +39,6 @@
                 android:textColor="@color/text_black"
                 android:textSize="17dp"
                 android:textStyle="bold" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerInParent="true"
-                android:layout_marginEnd="@dimen/dp15"
-                android:adjustViewBounds="true"
-                android:src="@mipmap/ic_scan"
-                android:tint="@color/text_black" />
-
 
         </RelativeLayout>
 
@@ -62,53 +53,28 @@
         android:background="@drawable/bg_view_blue_12dp"
         app:layout_constraintTop_toBottomOf="@id/tool_bar" />
 
+    <ImageView
+        android:id="@+id/iv_icon"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="@dimen/dp15"
+        android:adjustViewBounds="true"
+        android:scaleType="centerInside"
+        app:layout_constraintEnd_toEndOf="@id/view_1"
+        app:layout_constraintStart_toStartOf="@id/view_1"
+        app:layout_constraintTop_toTopOf="@id/view_1" />
+
     <TextView
         android:id="@+id/tv_all_price"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="0"
-        android:layout_marginEnd="@dimen/dp15"
-        app:layout_constraintBottom_toBottomOf="@id/view_1"
-        app:layout_constraintEnd_toEndOf="@id/view_1"
-        android:textColor="@color/white"
-        android:layout_marginBottom="@dimen/dp15"
-        android:textSize="@dimen/dp20"
-        android:textStyle="bold"  />
-
-    <TextView
-        android:id="@+id/tv_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="@string/asdt"
+        android:text="0"
         android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="@id/view_1"
-        app:layout_constraintTop_toTopOf="@id/view_1"
-        android:layout_margin="@dimen/dp15"
-        android:textSize="14dp"  />
-
-    <ImageView
-        android:layout_width="@dimen/dp15"
-        android:adjustViewBounds="true"
-        app:layout_constraintTop_toTopOf="@id/tv_1"
-        android:src="@mipmap/ic_more_white"
-        app:layout_constraintBottom_toBottomOf="@id/tv_1"
-        app:layout_constraintEnd_toEndOf="@id/tv_all_price"
-        android:layout_height="wrap_content" />
-
-    <View
-        android:id="@+id/view_2"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="14dp"
-        android:background="@drawable/white_6dp"
-        android:visibility="gone"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_1" />
+        app:layout_constraintTop_toBottomOf="@id/iv_icon" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide_line"
@@ -117,43 +83,66 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
+    <View
+        android:id="@+id/view_3"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp45"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
     <TextView
         android:id="@+id/tv_coin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:drawableLeft="@mipmap/ic_coin"
         android:drawablePadding="15dp"
         android:gravity="center"
         android:text="@string/coin"
+        android:textColor="@color/text_black"
         android:textSize="14dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/view_2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/guide_line"
-        app:layout_constraintStart_toStartOf="@id/view_2"
-        app:layout_constraintTop_toTopOf="@id/view_2" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/view_3" />
 
     <TextView
         android:id="@+id/tv_withdaw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@mipmap/ic_coin"
+        android:drawableLeft="@mipmap/ic_withdaw"
         android:drawablePadding="15dp"
         android:gravity="center"
         android:text="@string/tv_withdraw"
+        android:textColor="@color/text_black"
         android:textSize="14dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/view_2"
-        app:layout_constraintEnd_toEndOf="@id/view_2"
-        app:layout_constraintStart_toEndOf="@id/guide_line"
-        app:layout_constraintTop_toTopOf="@id/view_2" />
+        app:layout_constraintBottom_toBottomOf="@id/view_3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guide_line"
+        app:layout_constraintTop_toTopOf="@id/view_3" />
+
+
+    <TextView
+        android:id="@+id/tv_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp15"
+        android:layout_marginTop="@dimen/dp15"
+        android:drawableLeft="@mipmap/ic_wallet_record"
+        android:drawablePadding="@dimen/dp5"
+        android:text="@string/string_2"
+        android:textColor="@color/text_black"
+        android:textSize="@dimen/sp_15_text_size"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_1" />
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:paddingTop="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view_1">
+        app:layout_constraintBottom_toTopOf="@id/view_3"
+        app:layout_constraintTop_toBottomOf="@id/tv_1">
 
         <com.ktw.fly.view.PullRefreshHeader
             android:layout_width="match_parent"
