--- a/app/src/main/res/layout/item_wallet_layout.xml
+++ b/app/src/main/res/layout/item_wallet_layout.xml
@@ -31,16 +31,16 @@
         app:layout_constraintStart_toEndOf="@id/item_img_iv"
         app:layout_constraintTop_toTopOf="@id/item_img_iv" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@mipmap/right_arrow_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="14dp"
-        android:id="@+id/item_right_iv"
-        app:layout_constraintTop_toTopOf="@id/item_img_iv"
-        app:layout_constraintBottom_toBottomOf="@id/item_img_iv"
-        android:layout_height="wrap_content" />
+<!--    <ImageView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:adjustViewBounds="true"-->
+<!--        android:src="@mipmap/right_arrow_icon"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:layout_marginEnd="14dp"-->
+<!--        android:id="@+id/item_right_iv"-->
+<!--        app:layout_constraintTop_toTopOf="@id/item_img_iv"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/item_img_iv"-->
+<!--        android:layout_height="wrap_content" />-->
 
     <androidx.constraintlayout.widget.Guideline
         android:layout_width="wrap_content"
@@ -51,10 +51,10 @@
 
     <TextView
         android:layout_width="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/item_right_iv"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guide_line"
         android:layout_marginEnd="14dp"
-        android:textSize="@dimen/sp_18_text_size"
+        android:textSize="@dimen/dp20"
         android:textColor="@color/text_black"
         android:id="@+id/item_number_tv"
         android:textStyle="bold"
@@ -63,11 +63,21 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:textSize="@dimen/sp_12_text_size"
+        android:textSize="@dimen/dp10"
         tools:text="¥ 7120.00"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/item_number_tv"
         app:layout_constraintTop_toBottomOf="@id/guide_line"
         android:id="@+id/item_price_tv"
         android:layout_height="wrap_content" />
+
+    <View
+        android:layout_width="0dp"
+        android:background="#E5E9EA"
+        app:layout_constraintStart_toStartOf="@id/item_currency_tv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_img_iv"
+        android:layout_marginTop="13dp"
+        android:layout_height="1px" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
