--- a/app/src/main/res/layout/item_muc_file_bean.xml
+++ b/app/src/main/res/layout/item_muc_file_bean.xml
@@ -27,7 +27,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:src="@mipmap/icon" />
+            android:src="@mipmap/ic_login_logo" />
 
         <LinearLayout
             android:layout_width="0dp"
