--- a/app/src/main/res/layout/item_wallet_record_layout.xml
+++ b/app/src/main/res/layout/item_wallet_record_layout.xml
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
         android:text="2222"
-        android:textColor="@color/wallet_type_fail"
+        android:textColor="@color/text_black"
         app:layout_constraintBottom_toBottomOf="@id/item_time_tv"
         app:layout_constraintEnd_toStartOf="@id/item_more_iv"
         app:layout_constraintTop_toTopOf="@id/item_time_tv" />
