--- a/app/src/main/res/layout/item_send_red_packet_receiver.xml
+++ b/app/src/main/res/layout/item_send_red_packet_receiver.xml
@@ -5,41 +5,30 @@
     android:layout_height="match_parent"
     android:background="@drawable/dw_yuanjiao_whit_5"
     android:orientation="vertical"
-    android:paddingVertical="@dimen/dp10">
+    android:paddingHorizontal="15dp">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:background="@color/Grey_500" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingVertical="@dimen/dp10">
+    <RelativeLayout style="@style/RedPacketCountListStyle">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/red_receiver"
             android:textColor="@color/text_red_light"
-            android:textSize="@dimen/sp_15_text_size" />
-
+            android:textSize="@dimen/sp_16_text_size" />
 
         <TextView
-            android:id="@+id/tv_red_receiver"
+            android:id="@+id/red_receiver"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:textColor="@color/text_red"
-            android:textSize="@dimen/sp_15_text_size"
-            tools:text="用户2" />
+            android:textSize="@dimen/sp_16_text_size"
+            tools:text="用户" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingVertical="8dp">
 
+    <RelativeLayout style="@style/RedPacketCountListStyle">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,7 +38,7 @@
 
 
         <TextView
-            android:id="@+id/tv_red_receiver_sum"
+            android:id="@+id/red_receiver_sum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -58,11 +47,8 @@
             tools:text="20.0000 AAT" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingVertical="8dp">
 
+    <RelativeLayout style="@style/RedPacketCountListStyle">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,7 +58,7 @@
 
 
         <TextView
-            android:id="@+id/tv_red_receiver_time"
+            android:id="@+id/red_receiver_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -80,5 +66,6 @@
             android:textSize="@dimen/sp_15_text_size"
             tools:text="2021-09-18 20:35:15" />
     </RelativeLayout>
+
 
 </LinearLayout>
