--- a/app/src/main/res/layout/activity_red_packet_list.xml
+++ b/app/src/main/res/layout/activity_red_packet_list.xml
@@ -2,6 +2,7 @@
 
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/draw_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -49,8 +50,7 @@
             android:id="@+id/rg_red"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_margin="15dp"
             android:orientation="horizontal">
 
             <RadioButton
@@ -81,100 +81,182 @@
                 android:textSize="@dimen/sp_15_text_size" />
         </RadioGroup>
 
-
-        <RelativeLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/red_packet_list_text_bg_checked">
+            android:layout_height="match_parent"
+            android:scrollbars="none">
 
-            <com.ktw.fly.view.CircleImageView
-                android:id="@+id/iv_avatar"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_margin="10dp"
-                android:src="@drawable/avatar_normal" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@id/iv_avatar"
-                android:layout_alignBottom="@id/iv_avatar"
-                android:layout_toRightOf="@id/iv_avatar"
-                android:gravity="center_vertical"
-                android:text="Lucas"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp_12_text_size"
-                tools:text="Lucas" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
 
-            <TextView
-                android:id="@+id/tv_red_amount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="1908.0908"
-                android:textColor="@color/white"
-                android:textSize="25sp"
-                android:textStyle="bold" />
+                <RelativeLayout
+                    android:id="@+id/rl_user"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_marginHorizontal="15dp"
+                    android:background="@drawable/red_packet_list_text_bg_checked">
 
-            <TextView
-                android:id="@+id/tv_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/tv_red_amount"
-                android:layout_marginLeft="3dp"
-                android:layout_toRightOf="@id/tv_red_amount"
-                android:text="ASDT"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp_15_text_size" />
+                    <com.ktw.fly.view.CircleImageView
+                        android:id="@+id/iv_avatar"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_margin="10dp"
+                        android:src="@drawable/avatar_normal" />
 
-            <TextView
-                android:id="@+id/tv_amount_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_red_amount"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="15dp"
-                android:text="@string/red_send_amount"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp_12_text_size" />
-        </RelativeLayout>
+                    <TextView
+                        android:id="@+id/tv_user_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@id/iv_avatar"
+                        android:layout_alignBottom="@id/iv_avatar"
+                        android:layout_toRightOf="@id/iv_avatar"
+                        android:gravity="center_vertical"
+                        android:text="Lucas"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_12_text_size"
+                        tools:text="Lucas" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="20dp">
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@mipmap/icon_red_packet_history" />
+                    <TextView
+                        android:id="@+id/tv_red_amount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="1908.0908"
+                        android:textColor="@color/white"
+                        android:textSize="25sp"
+                        android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="3dp"
-                android:text="@string/red_packet_history"
-                android:textColor="@color/text_red"
-                android:textSize="@dimen/sp_15_text_size" />
-        </LinearLayout>
+                    <TextView
+                        android:id="@+id/tv_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBaseline="@id/tv_red_amount"
+                        android:layout_marginLeft="3dp"
+                        android:layout_toRightOf="@id/tv_red_amount"
+                        android:text="ASDT"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_15_text_size" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp" />
+                    <TextView
+                        android:id="@+id/tv_amount_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_red_amount"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"
+                        android:text="@string/red_send_amount"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_12_text_size" />
+
+                    <ImageView
+                        android:id="@+id/iv_open"
+                        android:layout_width="35dp"
+                        android:layout_height="21dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="15dp"
+                        android:layout_marginBottom="15dp"
+                        android:src="@mipmap/icon_open_rv" />
+
+                    <TextView
+                        android:id="@+id/tv_capital_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@id/iv_avatar"
+                        android:layout_alignBottom="@id/iv_avatar"
+                        android:layout_toLeftOf="@id/iv_arrow"
+                        android:gravity="center_vertical"
+                        android:text="Lucas"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_15_text_size"
+                        tools:text="ASTD" />
+                    <ImageView
+                        android:id="@+id/iv_arrow"
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_alignTop="@id/iv_avatar"
+                        android:layout_alignBottom="@id/iv_avatar"
+                        android:layout_alignParentRight="true"
+                        android:gravity="center_vertical"
+                        android:layout_marginRight="15dp"
+                        android:text="Lucas"
+                        android:src="@mipmap/icon_arrows_r"/>
+
+
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="15dp"
+                    android:layout_marginVertical="20dp">
+
+                    <ImageView
+                        android:id="@+id/iv_history"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@mipmap/icon_red_packet_history" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:text="@string/red_packet_history"
+                        android:textColor="@color/text_red"
+                        android:textSize="@dimen/sp_15_text_size" />
+                </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="15dp" />
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="180dp"
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/dialog_layout"
+        android:layout_width="230dp"
         android:layout_height="match_parent"
-        android:layout_gravity="end">
+        android:layout_gravity="end"
+        android:background="@color/white"
+        android:gravity="end"
+        android:orientation="vertical">
+
+        <com.ktw.fly.view.MergerStatus
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/main_color">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+
+                <ImageView
+                    android:id="@+id/iv_cancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_margin="15dp"
+                    android:adjustViewBounds="true"
+                    android:src="@mipmap/ic_cancel" />
+
+            </RelativeLayout>
+
+        </com.ktw.fly.view.MergerStatus>
 
 
-    </RelativeLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.drawerlayout.widget.DrawerLayout>
