--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -844,4 +844,10 @@
         <item name="android:windowExitAnimation">@anim/scale_dialog_out_anim</item>
     </style>
 
+
+    <style name="RedPacketCountListStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
 </resources>
