--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -139,6 +139,78 @@
                 android:showDividers="middle">
 
                 <RelativeLayout
+                    android:id="@+id/bing_phone_rl"
+                    style="@style/IMTble_No_Line"
+                    android:layout_marginTop="9dp">
+
+                    <TextView
+                        android:id="@+id/bing_phone_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:gravity="center"
+                        android:text="@string/bind_phone_account"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/one_level_title" />
+
+                    <TextView
+                        android:id="@+id/tv_phone"
+                        style="@style/TextValue"
+                        android:layout_toRightOf="@+id/bing_phone_tv"
+                        android:text="" />
+
+                    <ImageView
+                        style="@style/setting_bg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:contentDescription="@string/app_name" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/bing_email_rl"
+                    style="@style/IMTble_No_Line"
+                    android:visibility="visible">
+
+                    <TextView
+                        android:id="@+id/bing_email"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:gravity="center"
+                        android:text="@string/bind_email_account"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/one_level_title" />
+
+                    <TextView
+                        android:id="@+id/tv_email_scan"
+                        style="@style/TextValue"
+                        android:layout_toRightOf="@+id/bing_email"
+                        android:text="" />
+
+                    <ImageView
+                        style="@style/setting_bg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:contentDescription="@string/app_name" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@drawable/common_divider"
+                android:orientation="vertical"
+                android:showDividers="middle">
+
+                <RelativeLayout
                     android:id="@+id/switch_language"
                     style="@style/IMTble_No_Line"
                     android:layout_marginTop="9dp">
