--- a/app/src/main/res/layout/item_send_red_packet_receiver.xml
+++ b/app/src/main/res/layout/item_send_red_packet_receiver.xml
@@ -4,9 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/dw_yuanjiao_whit_5"
-    android:orientation="vertical"
-    android:paddingHorizontal="15dp">
+    android:orientation="vertical">
 
+    <View android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="5dp"
+        android:background="#E9E9E9"/>
 
     <RelativeLayout style="@style/RedPacketCountListStyle">
 
