优化充提币功能

--- a/app/src/main/res/layout/layout_main_footbar.xml
+++ b/app/src/main/res/layout/layout_main_footbar.xml
@@ -154,7 +154,6 @@
 
         </FrameLayout>
 
-
         <FrameLayout
             android:id="@+id/flFindPoint"
             android:layout_width="0dp"
@@ -175,7 +174,6 @@
 
         </FrameLayout>
 
-
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -183,6 +181,25 @@
 
             <TextView
                 android:id="@+id/main_tab_four_tv"
+                android:layout_width="@dimen/indicator_size"
+                android:layout_height="@dimen/indicator_size"
+                android:layout_gravity="top|right"
+                android:layout_marginRight="@dimen/indicator_margin"
+                android:background="@drawable/tab_unread_bg"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:textSize="10dp"
+                android:visibility="invisible" />
+
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/main_tab_five_tv"
                 android:layout_width="@dimen/indicator_size"
                 android:layout_height="@dimen/indicator_size"
                 android:layout_gravity="top|right"
