--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -132,6 +132,7 @@
             </RelativeLayout>
 
             <LinearLayout
+                android:id="@+id/ll_bind"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:divider="@drawable/common_divider"
