--- a/app/src/main/res/layout/red_packet_empty.xml
+++ b/app/src/main/res/layout/red_packet_empty.xml
@@ -5,8 +5,8 @@
 
     <ImageView
         android:id="@+id/iv_empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
         android:src="@mipmap/icon_red_empty" />
 
