1.本地数据缓存 2.账号显示优化

--- a/app/src/main/res/layout/activity_basic_info_edit.xml
+++ b/app/src/main/res/layout/activity_basic_info_edit.xml
@@ -248,7 +248,7 @@
                     <TextView
                         android:id="@+id/tvPhoneNumber"
                         style="@style/IMTbleLine_TextKey"
-                        android:text="@string/my_phone_number" />
+                        android:text="@string/login_account" />
 
                     <TextView
                         android:id="@+id/phone_tv"
