--- a/app/src/main/res/layout/red_packet_empty.xml
+++ b/app/src/main/res/layout/red_packet_empty.xml
@@ -5,9 +5,10 @@
 
     <ImageView
         android:id="@+id/iv_empty"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_centerInParent="true"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
         android:src="@mipmap/icon_red_empty" />
 
     <TextView
